--- a/src/componets/heroSection/herosection.css
+++ b/src/componets/heroSection/herosection.css
@@ -13,15 +13,16 @@
 }
 .hero-txt{
     width: 1126px;
-    height: 288px;
-    color: white;
-    font-size: 70px;
-    line-height: 144px;
-    letter-spacing: -7.5px;
     padding-top: 72px;
-      margin:0px auto ;
-      font-weight: 600;
+    margin:0px auto ;
+}
 
-
+.hero-txt h1{
+  margin: 0;
+  color: white;
+  font-size: 140px;
+  letter-spacing: -7.5px;
+  font-weight: 600;
+  line-height: 144px;
 
 }
