--- a/src/componets/our-team/ourTeam.css
+++ b/src/componets/our-team/ourTeam.css
@@ -1,4 +1,5 @@
 .team-container {
+  
   padding: 0 80px;
 }
 
@@ -31,4 +32,16 @@
 .card-container {
   width: 100%;
   box-sizing: border-box;
+}
+.memberes-btn{
+  margin-top: 32px;
+  width: 100%;
+  background-color: inherit;
+  gap:8px ;
+
+    border: 1px solid #282828;
+    display: flex;
+    justify-content: center;
+    padding: 14px  28px;
+    border-radius: 39px;
 }
