--- a/src/componets/ourServices/ourservices.css
+++ b/src/componets/ourServices/ourservices.css
@@ -1,4 +1,21 @@
+
+
 .services-wrapper{
-    width: 1280px;
+    max-width: 1280px;
+    width: 100%;
     margin: 0 auto;
+    padding: 0 24px;
+    box-sizing: border-box;
+}
+.title{
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 24px;
+    box-sizing: border-box;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    justify-content: flex-start;
+
 }
