--- a/src/componets/ourServices/serviceslabel.css
+++ b/src/componets/ourServices/serviceslabel.css
@@ -1,12 +1,19 @@
-.service-container{
+.service-label{
     display: flex;
     gap: 32px;
     font-size: 34px;
     align-items: flex-start;
+    padding: 32px 0;
+      border-bottom: 1px solid #282828;
+
+
 
 
     
 }
 .service-img{
     width:150px
+}
+.add{
+    margin-left: auto;
 }
